--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <input type="radio" name="playSource" value="remoteSource2"><span>监狱风云2</span>
     </label>
     <label>
+      <input type="radio" name="playSource" value="remoteSource3"><span>波涛汹涌</span>
+    </label>
+    <label>
       <input type="radio" name="playSource" value="localSource"><span>傻逼兔子</span>
     </label>
     <label>
@@ -33,6 +36,7 @@
     const playSourceMap = {
       remoteSource: 'https://media.qlchat.com/qlLive/activity/video/4B6BOZKN-9Z5R-4TE8-1661412635902-YGNDJV7SKO5W.mp4',
       remoteSource2: 'https://media.qlchat.com/qlLive/activity/video/NRAOHNLG-4P6Y-KJY4-1661412685421-N6J2SE2XZBV6.mp4',
+      remoteSource3: 'https://cdn.jsdelivr.net/gh/ldlh615/stream-meida-demo/girl.mp4',
       localSource: './frag_bunny.mp4',
       localSource2: './girl.mp4',
     }
