--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>stream-meida-demo</title>
+    <style>
+      video, canvas {
+        background: #000;
+      }
+    </style>
   </head>
 
   <body>
     <video id="video" width="300" height="200" controls autoplay></video>
+    <canvas id="canvas" width="300" height="200"></canvas>
     <hr />
     <div>
       <span>Resource: </span>
       <input id="resource" type="text" value="./resource/1.mp4" />
       <hr />
+      <button id="playUrl">Play With url</button>
       <button id="playBlobBtn">Play With Bolb</button>
       <button id="playMediaSourceBtn">Play With MediaSource</button>
+      <button id="playCanvasBtn">Play With Canvas</button>
     </div>
     <script>
       function fetchRemoteSource(url, headers) {
@@ -32,10 +40,24 @@
       const mimeCodec = 'video/mp4; codecs="avc1.64001F, mp4a.40.2"';
 
       const video = document.getElementById('video');
+      const playUrlBtn = document.getElementById('playUrl');
       const playBlobBtn = document.getElementById('playBlobBtn');
       const playMediaSourceBtn = document.getElementById('playMediaSourceBtn');
+      const playCanvasBtn = document.getElementById('playCanvasBtn');
+
+      var canvas = document.getElementById('canvas');
+      var ctx = canvas.getContext('2d');
+
+      playUrlBtn.onclick = playWithUrl;
       playBlobBtn.onclick = playWithBlob;
       playMediaSourceBtn.onclick = playWithMediaSourceBtn;
+      playCanvasBtn.onclick = playWithCanvasBtn;
+
+      function playWithUrl() {
+        const playSource = getPlaySource();
+        video.src = playSource;
+        video.play();
+      }
 
       function playWithBlob() {
         const playSource = getPlaySource();
@@ -82,6 +104,43 @@
         };
 
         video.src = URL.createObjectURL(mediaSource);
+      }
+
+      function playWithCanvasBtn() {
+        const playSource = getPlaySource();
+        fetchRemoteSource(playSource)
+          .then((res) => res.blob())
+          .then((blob) => {
+            const video = document.createElement('video');
+            var url = URL.createObjectURL(blob);
+            video.src = url;
+
+            video.onplay = function () {
+              video.state = 'playing';
+              drawVideo();
+            };
+            video.onended = function () {
+              video.state = 'ended';
+            };
+
+            video.play();
+
+            function drawVideo() {
+              if (video.state !== 'playing') {
+                return;
+              }
+              ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+              let frame = ctx.getImageData(0, 0, canvas.width, canvas.height);
+              for (let i = 0; i < frame.data.length; i++) {
+                frame.data[i] = Math.max(0, Math.min(256, frame.data[i] - 40));
+              }
+              ctx.putImageData(frame, 0, 0);
+
+              requestAnimationFrame(function () {
+                drawVideo(video);
+              });
+            }
+          });
       }
     </script>
   </body>
