--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       const playMediaSourceBtn = document.getElementById('playMediaSourceBtn');
       const playCanvasBtn = document.getElementById('playCanvasBtn');
 
-      var canvas = document.getElementById('canvas');
-      var ctx = canvas.getContext('2d');
+      const canvas = document.getElementById('canvas');
+      const ctx = canvas.getContext('2d');
 
       playUrlBtn.onclick = playWithUrl;
       playBlobBtn.onclick = playWithBlob;
