--- a/server.html
+++ b/server.html
@@ -18,13 +18,13 @@
     <div>
       <span>Resource: </span>
       <select id="resource" value="/resource/1.mp4">
-        <option value="http://127.0.0.1:8080/resource/1.mp4">http://127.0.0.1:8080/resource/1.mp4</option>
+        <option value="http://127.0.0.1:8080/resource/1.mp4" selected>http://127.0.0.1:8080/resource/1.mp4</option>
         <option value="http://127.0.0.1:8080/resource/2.mp4">http://127.0.0.1:8080/resource/2.mp4</option>
-        <option value="http://127.0.0.1:8080/resource/3.mp4" selected>http://127.0.0.1:8080/resource/3.mp4</option>
-        <option value="./resource/3.mp4">./resource/3.mp4</option>
+        <option value="http://127.0.0.1:8080/resource/3.mp4">http://127.0.0.1:8080/resource/3.mp4</option>
+        <option value="http://127.0.0.1:8080/resource/4.mp4">http://127.0.0.1:8080/resource/4.mp4</option>
       </select>
       <hr />
-      <button id="loadResource">Load Resource</button>
+      <button id="loadResource">Load Resource And Play</button>
     </div>
     <script>
       function fetchRemoteSource(url, headers) {
@@ -48,6 +48,7 @@
         const playSource = getPlaySource();
         video.src = playSource;
         video.load();
+        video.play();
       };
     </script>
   </body>
