--- a/server.html
+++ b/server.html
@@ -17,11 +17,11 @@
     <hr />
     <div>
       <span>Resource: </span>
-      <select id="resource" value="/resource/1.mp4">
-        <option value="http://127.0.0.1:8080/resource/1.mp4" selected>http://127.0.0.1:8080/resource/1.mp4</option>
-        <option value="http://127.0.0.1:8080/resource/2.mp4">http://127.0.0.1:8080/resource/2.mp4</option>
-        <option value="http://127.0.0.1:8080/resource/3.mp4">http://127.0.0.1:8080/resource/3.mp4</option>
-        <option value="http://127.0.0.1:8080/resource/4.mp4">http://127.0.0.1:8080/resource/4.mp4</option>
+      <select id="resource" value="/1.mp4">
+        <option value="http://127.0.0.1:8080/1.mp4" selected>1.mp4</option>
+        <option value="http://127.0.0.1:8080/2.mp4">2.mp4</option>
+        <option value="http://127.0.0.1:8080/3.mp4">3.mp4</option>
+        <option value="http://127.0.0.1:8080/4.mp4">4.mp4</option>
       </select>
       <hr />
       <button id="loadResource">Load Resource And Play</button>
